; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_relation_access_tracking.c_ParallelQueryExecutedInTransaction.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_relation_access_tracking.c_ParallelQueryExecutedInTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@RelationAccessHash = common dso_local global i32* null, align 8
@PARALLEL_ACCESS_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ParallelQueryExecutedInTransaction() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca i32, align 4
  %5 = call i32 (...) @ShouldRecordRelationAccess()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32*, i32** @RelationAccessHash, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %0
  store i32 0, i32* %1, align 4
  br label %33

11:                                               ; preds = %7
  %12 = load i32*, i32** @RelationAccessHash, align 8
  %13 = call i32 @hash_seq_init(i32* %2, i32* %12)
  %14 = call i64 @hash_seq_search(i32* %2)
  %15 = inttoptr i64 %14 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %15, %struct.TYPE_2__** %3, align 8
  br label %16

16:                                               ; preds = %29, %11
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %18 = icmp ne %struct.TYPE_2__* %17, null
  br i1 %18, label %19, label %32

19:                                               ; preds = %16
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @PARALLEL_ACCESS_MASK, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = call i32 @hash_seq_term(i32* %2)
  store i32 1, i32* %1, align 4
  br label %33

29:                                               ; preds = %19
  %30 = call i64 @hash_seq_search(i32* %2)
  %31 = inttoptr i64 %30 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %31, %struct.TYPE_2__** %3, align 8
  br label %16

32:                                               ; preds = %16
  store i32 0, i32* %1, align 4
  br label %33

33:                                               ; preds = %32, %27, %10
  %34 = load i32, i32* %1, align 4
  ret i32 %34
}

declare dso_local i32 @ShouldRecordRelationAccess(...) #1

declare dso_local i32 @hash_seq_init(i32*, i32*) #1

declare dso_local i64 @hash_seq_search(i32*) #1

declare dso_local i32 @hash_seq_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
